--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Node CI
 
 on: [push]
@@ -8,26 +7,27 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build:prod --if-present
-      env:
-        CI: true
-    
-  test:
-    name: ls test
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          ls -l
+      - uses: actions/checkout@master
+
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build:prod --if-present
+        env:
+          CI: true
+
+      - name: deploy to server
+        uses: SamKirkland/FTP-Deploy-Action@2.0.0
+        evn:
+          FTP_SERVER: 158.101.20.77
+          FTP_USERNAME: root
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+          LOCAL_DIR: dist
+          REMOTE_DIR: /root/glass/action_test
+          ARGS: --delete
